# SeniorProject

./: .gitignore  LICENSE  LIT.spec  environment.yml  main.py  pyproject.toml  requirements.txt
core/: Workers.py  calibration_dialog.py  image_display.py  pixel_stats.py  plot_canvas.py  project_serializer.py  select_RSR.py
gui/: form.ui  mainwindow.py  ui_form.py
src/: calculate_radiance_BB.py  calibrate_rjpeg.py  flir_rjpeg_to_radiance.py  parse_drs_data.py  parse_rjpeg_data.py  plot_drs_data.py  rad_mapping.py  rename_drs_files.py  rsr_parse.py
src/LWIRimagetool/: Blackbody.py  BlackbodyCalibration.py  CalibrationData.py  CalibrationDataFactory.py  ENVI.py  ImageData.py  ImageDataFactory.py  RJPEG.py  __init__.py
src/LWIRimagetool/LWIR_Tool/: form.ui  mainwindow.py  ui_form.py
